@@ -3,7 +3,7 @@
 /*
   Part of the Processing project - http://processing.org
 
-  Copyright (c) 2012-16 The Processing Foundation
+  Copyright (c) 2012-19 The Processing Foundation
   Copyright (c) 2004-12 Ben Fry and Casey Reas
   Copyright (c) 2001-04 Massachusetts Institute of Technology
 
@@ -31,6 +31,7 @@ import java.io.*;
 import java.lang.reflect.InvocationTargetException;
 import java.text.SimpleDateFormat;
 import java.util.*;
+import java.util.Map.Entry;
 
 import javax.swing.JFileChooser;
 import javax.swing.JMenu;
@@ -55,14 +56,17 @@ import processing.data.StringList;
 public class Base {
   // Added accessors for 0218 because the UpdateCheck class was not properly
   // updating the values, due to javac inlining the static final values.
-  static private final int REVISION = 251;
+  static private final int REVISION = 269;
   /** This might be replaced by main() if there's a lib/version.txt file. */
-  static private String VERSION_NAME = "0251"; //$NON-NLS-1$
+  static private String VERSION_NAME = "0269"; //$NON-NLS-1$
   /** Set true if this a proper release rather than a numbered revision. */
 
-  /** True if heavy debugging error/log messages are enabled */
-  static public boolean DEBUG = false;
-//  static public boolean DEBUG = true;
+  /**
+   * True if heavy debugging error/log messages are enabled. Set to true
+   * if an empty file named 'debug' is found in the settings folder.
+   * See implementation in createAndShowGUI().
+   */
+  static public boolean DEBUG;
 
   static private boolean commandLine;
 
@@ -112,9 +116,31 @@ public class Base {
         public void run() {
           try {
             createAndShowGUI(args);
+
           } catch (Throwable t) {
-            Messages.showTrace("It was not meant to be",
-                               "A serious problem happened during startup. Please report:\n" +
+            // Windows Defender has been insisting on destroying each new
+            // release by removing core.jar and other files. Yay!
+            // https://github.com/processing/processing/issues/5537
+            if (Platform.isWindows()) {
+              String mess = t.getMessage();
+              String missing = null;
+              if (mess.contains("Could not initialize class com.sun.jna.Native")) {
+                missing = "jnidispatch.dll";
+              } else if (mess.contains("NoClassDefFoundError: processing/core/PApplet")) {
+                missing = "core.jar";
+              }
+              if (missing != null) {
+                Messages.showError("Necessary files are missing",
+                                   "A file required by Processing (" + missing + ") is missing.\n\n" +
+                                   "Make sure that you're not trying to run Processing from inside\n" +
+                                   "the .zip file you downloaded, and check that Windows Defender\n" +
+                                   "hasn't removed files from the Processing folder.\n\n" +
+                                   "(It sometimes flags parts of Processing as a trojan or virus.\n" +
+                                   "It is neither, but Microsoft has ignored our pleas for help.)", t);
+              }
+            }
+            Messages.showTrace("Unknown Problem",
+                               "A serious error happened during startup. Please report:\n" +
                                "http://github.com/processing/processing/issues/new", t, true);
           }
         }
@@ -129,7 +155,6 @@ public class Base {
         String version = PApplet.loadStrings(versionFile)[0];
         if (!version.equals(VERSION_NAME)) {
           VERSION_NAME = version;
-//          RELEASE = true;
         }
       }
     } catch (Exception e) {
@@ -137,6 +162,19 @@ public class Base {
     }
 
     Platform.init();
+    // call after Platform.init() because we need the settings folder
+    Console.startup();
+
+    // Set the debug flag based on a file being present in the settings folder
+    File debugFile = getSettingsFile("debug.txt");
+    /*
+    if (debugFile.isDirectory()) {
+      // if it's a directory, it's a leftover from older releases, clear it
+      Util.removeDir(debugFile);
+    } else*/
+    if (debugFile.exists()) {
+      DEBUG = true;
+    }
 
     // Use native popups so they don't look so crappy on OS X
     JPopupMenu.setDefaultLightWeightPopupEnabled(false);
@@ -163,6 +201,7 @@ public class Base {
 
       boolean sketchbookPrompt = false;
       if (Preferences.getBoolean("welcome.show")) {
+        // only ask once about split sketchbooks
         if (!Preferences.getBoolean("welcome.seen")) {
           // Check if there's a 2.0 sketchbook present
           String oldPath = Preferences.getOldSketchbookPath();
@@ -173,9 +212,9 @@ public class Base {
               sketchbookPrompt = true;
 
             } else if (oldPath.equals(newPath)) {
-              // If both exist and are identical, then the user has been using
-              // alpha releases of 3.x and needs to be warned about the larger
-              // changes in this release.
+              // If both exist and are identical, then the user has used
+              // pre-releases of 3.x and needs to be warned about the
+              // larger changes in this release.
               sketchbookPrompt = true;
             }
           }
@@ -184,7 +223,6 @@ public class Base {
 
       // Get the sketchbook path, and make sure it's set properly
       locateSketchbookFolder();
-
 
       // Create a location for untitled sketches
       try {
@@ -196,28 +234,27 @@ public class Base {
                            "That's gonna prevent us from continuing.", e);
       }
 
-      Messages.log("about to create base..."); //$NON-NLS-1$
+      Messages.log("About to create Base..."); //$NON-NLS-1$
       try {
         final Base base = new Base(args);
+        Messages.log("Base() constructor succeeded");
+
         // Prevent more than one copy of the PDE from running.
         SingleInstance.startServer(base);
 
         // Needs to be shown after the first editor window opens, so that it
         // shows up on top, and doesn't prevent an editor window from opening.
         if (Preferences.getBoolean("welcome.show")) {
-          final boolean prompt = sketchbookPrompt;
-          EventQueue.invokeLater(new Runnable() {
-            public void run() {
-              try {
-                new Welcome(base, prompt);
-              } catch (IOException e) {
-                Messages.showTrace("Unwelcoming",
-                                   "Please report this error to\n" +
-                                   "https://github.com/processing/processing/issues", e, false);
-              }
-            }
-          });
+          try {
+            new Welcome(base, sketchbookPrompt);
+          } catch (IOException e) {
+            Messages.showTrace("Unwelcoming",
+                               "Please report this error to\n" +
+                               "https://github.com/processing/processing/issues", e, false);
+          }
         }
+
+        checkDriverBug();
 
       } catch (Throwable t) {
         // Catch-all to pick up badness during startup.
@@ -229,7 +266,53 @@ public class Base {
         Messages.showTrace("We're off on the wrong foot",
                            "An error occurred during startup.", t, true);
       }
-      Messages.log("done creating base..."); //$NON-NLS-1$
+      Messages.log("Done creating Base..."); //$NON-NLS-1$
+    }
+  }
+
+
+  // Remove this code in a couple months [fry 170211]
+  // https://github.com/processing/processing/issues/4853
+  // Or maybe not, if NVIDIA keeps doing this [fry 170423]
+  // https://github.com/processing/processing/issues/4997
+  static private void checkDriverBug() {
+    if (System.getProperty("os.name").contains("Windows 10")) {
+      new Thread(new Runnable() {
+        public void run() {
+          try {
+            Process p = Runtime.getRuntime().exec("powershell Get-WmiObject Win32_PnPSignedDriver| select devicename, driverversion | where {$_.devicename -like \\\"*nvidia*\\\"}");
+            BufferedReader reader = PApplet.createReader(p.getInputStream());
+            String line = null;
+            while ((line = reader.readLine()) != null) {
+              if (line.contains("3.7849")) {
+                EventQueue.invokeLater(new Runnable() {
+                  public void run() {
+                    Messages.showWarning("NVIDIA screwed up",
+                                         "Due to an NVIDIA bug, you need to update your graphics drivers,\n" +
+                                         "otherwise you won't be able to run any sketches. Update here:\n" +
+                                         "http://nvidia.custhelp.com/app/answers/detail/a_id/4378\n" +
+                                         "or read background about the issue at this link:\n" +
+                                         "https://github.com/processing/processing/issues/4853");
+                  }
+                });
+              } else if (line.contains("3.8165")) {
+                EventQueue.invokeLater(new Runnable() {
+                  public void run() {
+                    Messages.showWarning("NVIDIA screwed up again",
+                                         "Due to an NVIDIA bug, you need to update your graphics drivers,\n" +
+                                         "otherwise you won't be able to run any sketches. Update here:\n" +
+                                         "http://nvidia.custhelp.com/app/answers/detail/a_id/4453/\n" +
+                                         "or read background about the issue at this link:\n" +
+                                         "https://github.com/processing/processing/issues/4997");
+                  }
+                });
+              }
+            }
+          } catch (Exception e) {
+            Messages.loge("Problem checking NVIDIA driver", e);
+          }
+        }
+      }).start();
     }
   }
 
@@ -314,6 +397,8 @@ public class Base {
 
     // Check if any files were passed in on the command line
     for (int i = 0; i < args.length; i++) {
+      Messages.logf("Parsing command line... args[%d] = '%s'", i, args[i]);
+
       String path = args[i];
       // Fix a problem with systems that use a non-ASCII languages. Paths are
       // being passed in with 8.3 syntax, which makes the sketch loader code
@@ -323,6 +408,7 @@ public class Base {
         try {
           File file = new File(args[i]);
           path = file.getCanonicalPath();
+          Messages.logf("Changing %s to canonical %s", i, args[i], path);
         } catch (IOException e) {
           e.printStackTrace();
         }
@@ -334,10 +420,10 @@ public class Base {
 
     // Create a new empty window (will be replaced with any files to be opened)
     if (!opened) {
-//      System.out.println("opening a new window");
+      Messages.log("Calling handleNew() to open a new window");
       handleNew();
-//    } else {
-//      System.out.println("something else was opened");
+    } else {
+      Messages.log("No handleNew(), something passed on the command line");
     }
 
     // check for updates
@@ -378,12 +464,12 @@ public class Base {
    */
   void rebuildContribModes() {
     if (modeContribs == null) {
-      modeContribs = new ArrayList<ModeContribution>();
+      modeContribs = new ArrayList<>();
     }
     File modesFolder = getSketchbookModesFolder();
     List<ModeContribution> contribModes = getModeContribs();
 
-    Map<File, ModeContribution> known = new HashMap<File, ModeContribution>();
+    Map<File, ModeContribution> known = new HashMap<>();
     for (ModeContribution contrib : contribModes) {
       known.put(contrib.getFolder(), contrib);
     }
@@ -427,13 +513,27 @@ public class Base {
       System.out.println("Attempting to load " + modeClass + " with resources at " + modeResourcePath);
       ModeContribution mc = ModeContribution.load(this, new File(modeResourcePath), modeClass);
       contribModes.add(mc);
-      known.remove(mc);
+      File key = getFileForContrib(mc, known);
+      if (key != null) {
+        known.remove(key);
+      }
     }
     if (known.size() != 0) {
       for (ModeContribution mc : known.values()) {
         System.out.println("Extraneous Mode entry: " + mc.getName());
       }
     }
+  }
+
+
+  static private File getFileForContrib(ModeContribution contrib,
+                                 Map<File, ModeContribution> known) {
+    for (Entry<File, ModeContribution> entry : known.entrySet()) {
+      if (entry.getValue() == contrib) {
+        return entry.getKey();
+      }
+    }
+    return null;
   }
 
 
@@ -444,7 +544,7 @@ public class Base {
    */
   void rebuildContribExamples() {
     if (exampleContribs == null) {
-      exampleContribs = new ArrayList<ExamplesContribution>();
+      exampleContribs = new ArrayList<>();
     }
     ExamplesContribution.loadMissing(this);
   }
@@ -570,7 +670,7 @@ public class Base {
   public void rebuildToolList() {
     // Only do this once because the list of internal tools will never change
     if (internalTools == null) {
-      internalTools = new ArrayList<Tool>();
+      internalTools = new ArrayList<>();
 
       initInternalTool("processing.app.tools.CreateFont");
       initInternalTool("processing.app.tools.ColorSelector");
@@ -635,7 +735,8 @@ public class Base {
   protected void initInternalTool(String className) {
     try {
       Class<?> toolClass = Class.forName(className);
-      final Tool tool = (Tool) toolClass.newInstance();
+      final Tool tool = (Tool)
+        toolClass.getDeclaredConstructor().newInstance();
 
       tool.init(this);
       internalTools.add(tool);
@@ -778,7 +879,7 @@ public class Base {
 
 
   public List<Mode> getModeList() {
-    List<Mode> allModes = new ArrayList<Mode>();
+    List<Mode> allModes = new ArrayList<>();
     allModes.addAll(Arrays.asList(coreModes));
     if (modeContribs != null) {
       for (ModeContribution contrib : modeContribs) {
@@ -795,14 +896,14 @@ public class Base {
 
 
   private List<Contribution> getInstalledContribs() {
-    List<Contribution> contributions = new ArrayList<Contribution>();
+    List<Contribution> contributions = new ArrayList<>();
 
     List<ModeContribution> modeContribs = getModeContribs();
     contributions.addAll(modeContribs);
 
     for (ModeContribution modeContrib : modeContribs) {
       Mode mode = modeContrib.getMode();
-      contributions.addAll(new ArrayList<Library>(mode.contribLibraries));
+      contributions.addAll(new ArrayList<>(mode.contribLibraries));
     }
 
     // TODO this duplicates code in Editor, but it's not editor-specific
@@ -823,11 +924,11 @@ public class Base {
       String entry = c.getTypeName() + "=" +
         PApplet.urlEncode(String.format("name=%s\nurl=%s\nrevision=%d\nversion=%s",
                                         c.getName(), c.getUrl(),
-                                        c.getVersion(), c.getPrettyVersion()));
+                                        c.getVersion(), c.getBenignVersion()));
       entries.append(entry);
     }
     String joined =
-      "id=" + Preferences.get("update.id") + "&" + entries.join("&");
+      "id=" + UpdateCheck.getUpdateID() + "&" + entries.join("&");
 //    StringBuilder sb = new StringBuilder();
 //    try {
 //      // Truly ridiculous attempt to shove everything into a GET request.
@@ -966,7 +1067,7 @@ public class Base {
   private Mode promptForMode(final File sketch, final ModeInfo preferredMode) {
     final String extension =
       sketch.getName().substring(sketch.getName().lastIndexOf('.') + 1);
-    final List<Mode> possibleModes = new ArrayList<Mode>();
+    final List<Mode> possibleModes = new ArrayList<>();
     for (final Mode mode : getModeList()) {
       if (mode.canEdit(sketch)) {
         possibleModes.add(mode);
@@ -1094,12 +1195,17 @@ public class Base {
       // Make the directory for the new sketch
       newbieDir.mkdirs();
 
+      // Add any template files from the Mode itself
+      File newbieFile = nextMode.addTemplateFiles(newbieDir, newbieName);
+
+      /*
       // Make an empty pde file
       File newbieFile =
         new File(newbieDir, newbieName + "." + nextMode.getDefaultExtension()); //$NON-NLS-1$
       if (!newbieFile.createNewFile()) {
         throw new IOException(newbieFile + " already exists.");
       }
+      */
 
       // Create sketch properties file if it's not the default mode.
       if (!nextMode.equals(getDefaultMode())) {
@@ -1452,6 +1558,9 @@ public class Base {
       // Save out the current prefs state
       Preferences.save();
 
+      // Finished with this guy
+      Console.shutdown();
+
       if (!Platform.isMacOS()) {
         // If this was fired from the menu or an AppleEvent (the Finder),
         // then Mac OS X will send the terminate signal itself.
@@ -1588,6 +1697,15 @@ public class Base {
 
     if (folder.getName().equals("libraries")) {
       return false;  // let's not go there
+    }
+
+    if (folder.getName().equals("sdk")) {
+      // This could be Android's SDK folder. Let's double check:
+      File suspectSDKPath = new File(folder.getParent(), folder.getName());
+      File expectedSDKPath = new File(sketchbookFolder, "android" + File.separator + "sdk");
+      if (expectedSDKPath.getAbsolutePath().equals(suspectSDKPath.getAbsolutePath())) {
+        return false;  // Most likely the SDK folder, skip it
+      }
     }
 
     String[] list = folder.list();
@@ -1801,8 +1919,10 @@ public class Base {
         }
       }
     } catch (Exception e) {
-      Messages.showError("Problem getting the settings folder",
-                         "Error getting the Processing the settings folder.", e);
+      Messages.showTrace("An rare and unknowable thing happened",
+                         "Could not get the settings folder. Please report:\n" +
+                         "http://github.com/processing/processing/issues/new",
+                         e, true);
     }
     return settingsFolder;
   }
@@ -1869,6 +1989,7 @@ public class Base {
     getSketchbookToolsFolder().mkdirs();
     getSketchbookModesFolder().mkdirs();
     getSketchbookExamplesFolder().mkdirs();
+    getSketchbookTemplatesFolder().mkdirs();
   }
 
 
@@ -1894,6 +2015,11 @@ public class Base {
 
   static public File getSketchbookExamplesFolder() {
     return new File(sketchbookFolder, "examples");
+  }
+
+
+  static public File getSketchbookTemplatesFolder() {
+    return new File(sketchbookFolder, "templates");
   }
 
 
